--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://tatsukiserizawa.github.io/githuub.io/
+baseURL: https://tatsukiserizawa.github.io/githuub.io/pubric/
 languageCode: "ja"
 theme: hugo-profile
 
