--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://tatsukiserizawa.github.io/githuub.io/pubric/
+baseURL: https://tatsukiserizawa.github.io/githuub.io/
 languageCode: "ja"
 theme: hugo-profile
 
@@ -55,7 +55,7 @@ params:
   title: "Serizawa's Portfolio"
   description: Text about my cool site
   # staticPath: ""  # The path to serve the static files from
-  favicon: "/images/sweater.jpg"
+  favicon: "./pubric/images/sweater.jpg"
 
   # Whether to serve bootstrap css and js files from CDN or not. Can be set to true, "css" or "js" to choose between
   # serving both, only the css, or only the js files through the CDN. Any other value will make so that CDN is not used.
