--- a/hugo.yaml
+++ b/hugo.yaml
@@ -192,7 +192,7 @@ params:
           name: "View the project"
           url: "https://example.com"
         content: |
-          データサイエンティストとして，大規模データ分析や効果検証，LLMを活用したアプリケーション開発などを行っています．加えて，DevRelのような技術広報活動のリードもしています．
+          データサイエンティストとして，大規模データ分析や効果検証，LLMを活用したアプリケーション開発などを行っています．加えて，DevRelと呼ばれるような技術広報活動のリードもしています．
 
           主なアウトプット:
           
